loop system complete

--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "parot music x",
-  "productName": "parot music x",
+  "name": "ParotMusicX",
+  "productName": "ParotMusicX",
   "version": "1.0.0",
   "description": "My Electron application description",
   "main": "src/index.js",
@@ -24,7 +24,7 @@
         {
           "name": "@electron-forge/maker-squirrel",
           "config": {
-            "name": "parot music x"
+            "name": "ParotMusicX"
           }
         },
         {
